Spanish translation update from Victor Moral.

--- a/debian/changelog
+++ b/debian/changelog
@@ -6,6 +6,7 @@ ikiwiki (2.71) UNRELEASED; urgency=low
   * Improve escaping of wikilinks and preprocessor directives in content
     produced by aggregate and recentchanges.
   * French translation update from Philippe Batailler. Closes: #506250
+  * Spanish translation update from Victor Moral.
 
  -- Joey Hess <joeyh@debian.org>  Mon, 17 Nov 2008 14:02:10 -0500
 
