--- a/debian/changelog
+++ b/debian/changelog
@@ -8,6 +8,7 @@ ikiwiki (2.71) UNRELEASED; urgency=low
   * French translation update from Philippe Batailler. Closes: #506250
   * Spanish translation update from Victor Moral.
   * Fix handling of wrappergroup option.
+  * Correct --dumpsetup to include the srcdir in the setup file.
 
  -- Joey Hess <joeyh@debian.org>  Mon, 17 Nov 2008 14:02:10 -0500
 
