--- a/doc/index.mdwn
+++ b/doc/index.mdwn
@@ -1,9 +1,14 @@
-[[Ikiwiki]] is a wiki compiler. It converts a directory full of wiki pages
+Ikiwiki is a wiki compiler. It converts a directory full of wiki pages
 into html pages suitable for publishing on a website. Unlike a traditional
 wiki, ikiwiki does not have its own means of storing page history, its own
 markup language, or support for editing pages online. 
 
-To use [[ikiwiki]] to set up a wiki, you will probably want to use it with a
+Why call it IkiWiki? Well, partly because I'm sure some people will find
+this a pretty Iky Wiki, since it's so different from other Wikis. Partly
+because "ikiwiki" is a nice palindrome. Partly because its design turns
+the usual design for a Wiki inside-out and backwards.
+
+To use ikiwiki to set up a wiki, you will probably want to use it with a
 revision control system, such as [[Subversion]], for keeping track of past
 versions of pages. ikiwiki can run as a Subversion post-commit hook, so
 that each committed change to your wiki is immediatly compiled and
@@ -31,6 +36,5 @@ ikiwiki also supports making one page that is a [[SubPage]] of another.
 would consider it a full-fledged wiki.
 
 All wikis are supposed to have a [[SandBox]], so this one does to.
-If you'd like to try editing pages on this wiki, do whatever you'd like in 
 
-[[ikiwiki]] is developed by JoeyHess.
+ikiwiki is developed by [[JoeyHess]].
