--- a/doc/todo.mdwn
+++ b/doc/todo.mdwn
@@ -50,3 +50,5 @@ Being case insensative is handy, but it does make the [[BackLinks]] a bit
 ugly compared to other links. It should be possible to support pagenames
 that have uppercase, while still allowing them to be linked to using any
 case.
+
+## [[Bugs]]
