--- a/doc/index.mdwn
+++ b/doc/index.mdwn
@@ -10,7 +10,7 @@ the usual design for a Wiki inside-out and backwards.
 
 To use ikiwiki to set up a wiki, you will probably want to use it with a
 revision control system, such as [[Subversion]], for keeping track of past
-versions of pages. ikiwiki can run as a Subversion post-commit hook, so
+versions of pages. ikiwiki can run as a Subversion [[post-commit]] hook, so
 that each committed change to your wiki is immediatly compiled and
 published. (It can also be run by hand, by cron, or integrated with any
 other revision control system.) 
