--- a/doc/bugs.mdwn
+++ b/doc/bugs.mdwn
@@ -6,3 +6,5 @@
   back to Foo/Baz.
 * Foo/Bar/Baz shows up as Bar/Baz in the linkbacks on page Foo/Bar. Should
   show as just Baz there.
+* If I try to do a web commit, to a svn+ssh repo, it fails with
+  "Host key verification failed."
