--- a/doc/index.mdwn
+++ b/doc/index.mdwn
@@ -32,6 +32,8 @@ unchanged by ikiwiki as it builds your wiki. So you can check in an image,
 program, or other special file and link to it from your wiki pages.
 ikiwiki also supports making one page that is a [[SubPage]] of another.
 
+[[Setup]] has a tutorial for setting up ikiwki.
+
 [[TODO]] lists things that need to be added to ikiwiki before most people
 would consider it a full-fledged wiki.
 
