--- a/doc/bugs.mdwn
+++ b/doc/bugs.mdwn
@@ -8,3 +8,5 @@
   show as just Baz there.
 * If I try to do a web commit, to a svn+ssh repo, it fails with
   "Host key verification failed."
+  I think that the setuid isn't fully taking; it should be running as me,
+  but commit log shows www-data. So maybe it has the wrong username?
