--- a/doc/index.mdwn
+++ b/doc/index.mdwn
@@ -39,4 +39,4 @@ would consider it a full-fledged wiki.
 
 All wikis are supposed to have a [[SandBox]], so this one does to.
 
-ikiwiki is developed by [[JoeyHess]].
+ikiwiki is developed by [[Joey]].
