web commit from 66.118.98.137: trimming

--- a/doc/index.mdwn
+++ b/doc/index.mdwn
@@ -1,12 +1,7 @@
 Ikiwiki is a wiki compiler. It converts a directory full of wiki pages
 into html pages suitable for publishing on a website. Unlike a traditional
 wiki, ikiwiki does not have its own means of storing page history, its own
-markup language, or support for editing pages online. 
-
-Why call it IkiWiki? Well, partly because I'm sure some people will find
-this a pretty Iky Wiki, since it's so different from other Wikis. Partly
-because "ikiwiki" is a nice palindrome. Partly because its design turns
-the usual design for a Wiki inside-out and backwards.
+markup language, or support for editing pages online. [[WhyIkiWiki]]
 
 To use ikiwiki to set up a wiki, you will probably want to use it with a
 revision control system, such as [[Subversion]], for keeping track of past
