web commit from 66.118.98.137:

--- a/doc/features.mdwn
+++ b/doc/features.mdwn
@@ -8,6 +8,14 @@ Currently implemented:
   and is quite smart about converting it to html. The only additional markup
   provided by ikiwiki aside from regular markdown is the [[WikiLink]].
 
+* support for other file types
+
+  ikiwiki also supports files of any other type, including raw html, text,
+  images, etc. These are not converted to wiki pages, they are just copied
+  unchanged by ikiwiki as it builds your wiki. So you can check in an image,
+  program, or other special file and link to it from your wiki pages.
+  ikiwiki also supports making one page that is a [[SubPage]] of another.
+
 ----
 
 
