web commit from 66.118.98.137:

--- a/doc/features.mdwn
+++ b/doc/features.mdwn
@@ -14,7 +14,10 @@ Currently implemented:
   images, etc. These are not converted to wiki pages, they are just copied
   unchanged by ikiwiki as it builds your wiki. So you can check in an image,
   program, or other special file and link to it from your wiki pages.
-  ikiwiki also supports making one page that is a [[SubPage]] of another.
+
+* [[SubPage]]s
+
+  Arbitrarily deep hierarchies of pages with fairly simple and useful [[SubPage/LinkingRUles]]
 
 ----
 
