web commit from 66.118.98.137:

--- a/doc/subpage.mdwn
+++ b/doc/subpage.mdwn
@@ -1,4 +1,4 @@
-[[ikiwiki]] supports placing pages in a directory hierarchy. For example,
+ikiwiki supports placing pages in a directory hierarchy. For example,
 this page, [[SubPage]] has some related pages placed under it, like
 [[SubPage/LinkingRules]]. This is a useful way to add some order to your
 wiki rather than just having a great big directory full of pages.
