--- a/doc/subversion.mdwn
+++ b/doc/subversion.mdwn
@@ -1,3 +1,3 @@
 Subversion is a revision control system. While ikiwiki is relatively
 independant of the underlying revision control system, using it with
-Subversion is recommended.
+Subversion is recommended. Ikiki can run as a [[post-commit]] hook to update a wiki whenever commits come in.
