web commit from 66.118.98.137:

--- a/doc/index.mdwn
+++ b/doc/index.mdwn
@@ -1,7 +1,7 @@
 ikiwiki is a wiki compiler. It converts a directory full of wiki pages
 into html pages suitable for publishing on a website. Unlike a traditional
-wiki, ikiwiki does not have its own means of storing page history, its own
-markup language, or support for editing pages online. 
+wiki, ikiwiki does not have its own means of storing page history or its own
+markup language. Instead it uses [[Subversion]] and [[MarkDown]].
 
 To use ikiwiki to set up a wiki, you will probably want to use it with a
 revision control system, such as [[Subversion]], for keeping track of past
