web commit from 66.118.98.137:

--- a/doc/index.mdwn
+++ b/doc/index.mdwn
@@ -3,13 +3,16 @@ into html pages suitable for publishing on a website. Unlike a traditional
 wiki, ikiwiki does not have its own means of storing page history or its own
 markup language. Instead it uses [[Subversion]] and [[MarkDown]].
 
-See [[Features]] for a current list of ikiwiki's features. [[WhyIkiWiki]]
-might be useful if you're considering using this.
+* See [[Features]] for a current list of ikiwiki's features. 
 
-[[Setup]] has a tutorial for setting up ikiwki.
+* [[WhyIkiWiki]] might be useful if you're considering using this.
 
-[[TODO]] lists things that need to be added to ikiwiki before most people
+* [[Setup]] has a tutorial for setting up ikiwki.
+
+* [[TODO]] lists things that need to be added to ikiwiki before most people
 would consider it a full-fledged wiki.
+
+* [[Security]] lists potential security problems. ikiwiki is still being developed, and is being written with security as a priority, don't expect things to stay in this list for long.
 
 All wikis are supposed to have a [[SandBox]], so this one does to.
 
