web commit from 66.118.98.137:

--- a/doc/setup.mdwn
+++ b/doc/setup.mdwn
@@ -15,7 +15,7 @@ optional support for commits from the web.
 
 		svn co file:///svn/wikirepo/trunk ~/wikiwc
 
-4. Create some files them into subversion.
+4. Create some files and add them into subversion.
 
 		echo "Welcome to my empty wiki." > ~/wikiwc/index.mdwn
 		echo "Feel free to edit this page" > ~/wikiwc/sandbox.mdwn
