--- a/doc/todo.mdwn
+++ b/doc/todo.mdwn
@@ -6,12 +6,9 @@
 * No support for web user tracking/login yet.
 * Doesn't svn commit yet.
 
-## [[RecentChanges]]
+## recentchanges
 
-This will need to be another cgi script, that grubs through the
-[[Subversion]] logs.
-
-This should support RSS for notification of new and changed pages.
+Should support RSS for notification of new and changed pages.
 
 ## page history
 
