--- a/doc/features.mdwn
+++ b/doc/features.mdwn
@@ -27,6 +27,10 @@ Currently implemented:
 
   Arbitrarily deep hierarchies of pages with fairly simple and useful [[SubPage/LinkingRUles]]
 
+* [[RecentChanges]], editng pages in a web browser
+
+  Nearly the definition of a wiki, although perhaps ikiwiki challanges how much of that web gunk a wiki really needs. These features are optional and can be enabled by enabling [[CGI]].
+
 ----
 
 
