--- a/doc/features.mdwn
+++ b/doc/features.mdwn
@@ -29,7 +29,7 @@ Currently implemented:
 
 * [[RecentChanges]], editng pages in a web browser
 
-  Nearly the definition of a wiki, although perhaps ikiwiki challanges how much of that web gunk a wiki really needs. These features are optional and can be enabled by enabling [[CGI]].
+  Nearly the definition of a wiki, although perhaps ikiwiki challenges how much of that web gunk a wiki really needs. These features are optional and can be enabled by enabling [[CGI]].
 
 ----
 
