web commit from 66.118.98.137:

--- a/doc/features.mdwn
+++ b/doc/features.mdwn
@@ -33,4 +33,4 @@ Currently implemented:
 
 ----
 
-It also have lots of [[TODO]] items and [[Bugs]]. This wiki is not ready for production!
+It also has lots of [[TODO]] items and [[Bugs]]. This wiki is not ready for production!
