--- a/doc/features.mdwn
+++ b/doc/features.mdwn
@@ -4,7 +4,7 @@ Currently implemented:
 
   Rather than implement its own system for storing page histories etc, ikiwiki      simply uses subversion. (Supporting other revision control systems is also possible, ikiwiki only needs $FOO add, $FOO commit, and $FOO log).
 
-  Instead of editing pages in a stupid web form, you can use vim and commit changes via svn. Or work disconnected using svk and push your changes out when you come online.
+  Instead of editing pages in a stupid web form, you can use vim and commit changes via svn. Or work disconnected using svk and push your changes out when you come online. Deal with edit conflicts with others in a sane environment. Take advantage of subversion's smart merges.
 
  ikiwiki can be run from a [[post-commit]] hook to update your wiki immediatly whenever you commit.
 
