web commit from 66.118.98.137:

--- a/doc/bugs.mdwn
+++ b/doc/bugs.mdwn
@@ -12,3 +12,5 @@
   but commit log shows www-data. So maybe it has the wrong username?
 * Can't put the source in a directory named .source; the page finder skips
   that due to too broad exclusion of any dotfile in a path.
+* RecentChanges is a regular page, perhaps it should be automatically replaced with a link to the [[CGI]]?
+* [[ikiwiki]] should go to the same place as [[index]] (on this wiki).
