web commit from 66.118.98.137:

--- a/doc/index.mdwn
+++ b/doc/index.mdwn
@@ -13,6 +13,8 @@ markup language. Instead it uses [[Subversion]] and [[MarkDown]].
 
 * [[Security]] lists potential security problems. ikiwiki is still being developed, and is being written with security as a priority, don't expect things to stay in this list for long.
 
+Ikiwiki is _not_ yet formally realeased. If you really have to have it, <svn://svn.kitenet.net/ikiwiki/trunk>
+
 All wikis are supposed to have a [[SandBox]], so this one does to.
 
 ikiwiki is developed by [[Joey]].
