web commit from 66.118.98.137:

--- a/doc/sandbox.mdwn
+++ b/doc/sandbox.mdwn
@@ -6,7 +6,7 @@ See [[MarkDown]] for documentation of the markup syntax used on this page.
 
 Here's a paragraph.
 
-Here's another one.
+Here's another one with _emphasied_ and *bold* text.
 
 # Header
 
