--- a/doc/sandbox.mdwn
+++ b/doc/sandbox.mdwn
@@ -6,7 +6,7 @@ See [[MarkDown]] for documentation of the markup syntax used on this page.
 
 Here's a paragraph.
 
-Here's another one with _emphasized_ and *bold* text.
+Here's another one with *bold* text.
 
 # Header
 
