web commit from 66.118.98.137:

--- a/doc/todo.mdwn
+++ b/doc/todo.mdwn
@@ -4,7 +4,8 @@
 * Missing conflict detection.
 * Missing commit message box.
 * No support for web user tracking/login yet.
-* Doesn't svn commit yet.
+* Eventually, might want page deletion.
+* Eventually, might want file upload.
 
 ## recentchanges
 
@@ -13,7 +14,7 @@ Should support RSS for notification of new and changed pages.
 ## page history
 
 To see past versions of a page, we can either implement a browser for that,
-or just provide a way to link to the page in viewcvs.
+or just provide a way to link to the page in viewcvs. viewcvs seems fine to me.
 
 ## pluggable renderers
 
