--- a/doc/security.mdwn
+++ b/doc/security.mdwn
@@ -85,7 +85,7 @@ hopefully your web server will not run it.
 
 ## suid wrappers
 
-ikiwiki --gen-wrapper is intended to generate a wrapper program that
+ikiwiki --wrapper is intended to generate a wrapper program that
 runs ikiwiki to update a given wiki. The wrapper can in turn be made suid,
 for example to be used in a [[post-commit]] hook by people who cannot write
 to the html pages, etc.
