web commit from 66.118.98.137:

--- a/doc/index.mdwn
+++ b/doc/index.mdwn
@@ -9,7 +9,7 @@ markup language. Instead it uses [[Subversion]] and [[MarkDown]].
 
 * [[Setup]] has a tutorial for setting up ikiwki.
 
-* [[TODO]] and bugs lists things that need to be added to ikiwiki before most people would consider it a full-fledged wiki.
+* [[TODO]] and [[bugs]] lists things that need to be added to ikiwiki before most people would consider it a full-fledged wiki.
 
 * [[Security]] lists potential security problems. ikiwiki is still being developed, and is being written with security as a priority, don't expect things to stay in this list for long.
 
