--- a/doc/bugs.mdwn
+++ b/doc/bugs.mdwn
@@ -14,3 +14,5 @@
   that due to too broad exclusion of any dotfile in a path.
 * RecentChanges is a regular page, perhaps it should be automatically replaced with a link to the [[CGI]]?
 * [[ikiwiki]] should go to the same place as [[index]] (on this wiki).
+* There's no way to escape a [[WikiLink]] when discussing one on a wiki.
+* Wikilinks are even expanded in the middle of [[MarkDown]] code blocks, and probably shouldn't be (nor in blockquotes?)
