--- a/doc/features.mdwn
+++ b/doc/features.mdwn
@@ -27,6 +27,14 @@ Currently implemented:
 
   Arbitrarily deep hierarchies of pages with fairly simple and useful [[SubPage/LinkingRUles]]
 
+* Fast compiler
+
+  ikiwiki is fast and smart about updating a wiki, it only builds pages that have changed (and tracks things like creation of new pages and links that can indirectly cause a page to need a rebuild)
+
+* [[BackLinks]]
+
+  Automatically included on pages. Rather faster than eg [[MoinMoin]] and always there to help with navigation.
+
 * [[RecentChanges]], editng pages in a web browser
 
   Nearly the definition of a wiki, although perhaps ikiwiki challenges how much of that web gunk a wiki really needs. These features are optional and can be enabled by enabling [[CGI]].
