web commit from 66.118.98.137:

--- a/doc/todo.mdwn
+++ b/doc/todo.mdwn
@@ -11,10 +11,9 @@
 
 Should support RSS for notification of new and changed pages.
 
-## page history
+## docs
 
-To see past versions of a page, we can either implement a browser for that,
-or just provide a way to link to the page in viewcvs. viewcvs seems fine to me.
+Need to document all the command line switches in a man page and somehow on this wiki too. Can markdown generate a man page somehow?
 
 ## pluggable renderers
 
