--- a/doc/features.mdwn
+++ b/doc/features.mdwn
@@ -35,6 +35,10 @@ Currently implemented:
 
   Automatically included on pages. Rather faster than eg [[MoinMoin]] and always there to help with navigation.
 
+* [[PageHistory]]
+
+  Well, sorta. Rather than implementing YA history browser, it can link to [[ViewCVS]] or the link to browse the history of a wiki page.
+
 * [[RecentChanges]], editng pages in a web browser
 
   Nearly the definition of a wiki, although perhaps ikiwiki challenges how much of that web gunk a wiki really needs. These features are optional and can be enabled by enabling [[CGI]].
