web commit from 66.118.98.137:

--- a/doc/setup.mdwn
+++ b/doc/setup.mdwn
@@ -56,12 +56,16 @@ optional support for commits from the web.
    post-commit hook to add such links when updating the wiki in the
    future. Note the use of the [[WrapperParamsTrick]].
 
-		ikiwiki $(/svn/wikirepo/hooks/post-commit --params) --rebuild
 		ikiwiki $(/svn/wikirepo/hooks/post-commit --params) \
 			--cgiurl=http://host/~you/wiki/ikiwiki.cgi --wrapper
 		mv ikiwiki-wrap /svn/wikirepo/hooks/post-commit
+		ikiwiki $(/svn/wikirepo/hooks/post-commit --params) --rebuild
 
    Be sure to change the cgiurl to the actual url to the wiki.cgi you
    installed in step 9.
 
-10. Enjoy your new wiki!
+10. Add [[PageHistory]] links to the top of pages. This requires you to have setup [[ViewCVS]] or something similar to access your [[Subversion]] repository.  The --historyurl parameter makes ikiwiki add the links, and in that url, "[[]]" is replaced with the name of the file to view. So repeat step 9 to rebuild the wiki post commit wrapper and wiki, adding a historyurl something like this one:
+
+                --historyurl='http://svn.host/trunk/doc/[[]]?root=wiki'
+
+11. Enjoy your new wiki!
