web commit from 66.118.98.137:

--- a/doc/whyikiwiki.mdwn
+++ b/doc/whyikiwiki.mdwn
@@ -1,4 +1,4 @@
-Why call it IkiWiki? Well, partly because I'm sure some people will find
+Why call it ikiwiki? Well, partly because I'm sure some people will find
 this a pretty Iky Wiki, since it's so different from other Wikis. Partly
 because "ikiwiki" is a nice palindrome. Partly because its design turns
 the usual design for a Wiki inside-out and backwards.
