web commit from 66.118.98.137:

--- a/doc/todo.mdwn
+++ b/doc/todo.mdwn
@@ -41,4 +41,10 @@ ugly compared to other links. It should be possible to support pagenames
 that have uppercase, while still allowing them to be linked to using any
 case.
 
+## html
+
+prettfiy and validate html. css.
+
+(Please god, save me from the html template monster though..)
+
 ## [[Bugs]]
