web commit from 217.147.92.53:

--- a/doc/index.mdwn
+++ b/doc/index.mdwn
@@ -11,10 +11,10 @@ markup language. Instead it uses [[Subversion]] and [[MarkDown]].
 
 * [[TODO]] and [[bugs]] lists things that need to be added to ikiwiki before most people would consider it a full-fledged wiki.
 
-* [[Security]] lists potential security problems. ikiwiki is still being developed, and is being written with security as a priority, don't expect things to stay in this list for long.
+* [[Security]] lists potential security problems. ikiwiki is still being developed, and is being written with security as a priority, so don't expect things to stay in this list for long.
 
-Ikiwiki is _not_ yet formally realeased. If you really have to have it: svn://svn.kitenet.net/ikiwiki/trunk
+Ikiwiki is _not_ yet formally released. If you really have to have it: svn://svn.kitenet.net/ikiwiki/trunk
 
-All wikis are supposed to have a [[SandBox]], so this one does to.
+All wikis are supposed to have a [[SandBox]], so this one does too.
 
 ikiwiki is developed by [[Joey]].
