web commit from 151.196.18.127: Linkified?

--- a/doc/index.mdwn
+++ b/doc/index.mdwn
@@ -13,7 +13,7 @@ markup language. Instead it uses [[Subversion]] and [[MarkDown]].
 
 * [[Security]] lists potential security problems. ikiwiki is still being developed, and is being written with security as a priority, so don't expect things to stay in this list for long.
 
-Ikiwiki is _not_ yet formally released. If you really have to have it: svn://svn.kitenet.net/ikiwiki/trunk
+Ikiwiki is _not_ yet formally released. If you really have to have it: [[svn://svn.kitenet.net/ikiwiki/trunk]]
 
 All wikis are supposed to have a [[SandBox]], so this one does too.
 
