web commit from 71.104.166.233:

--- a/doc/features.mdwn
+++ b/doc/features.mdwn
@@ -6,7 +6,7 @@ Currently implemented:
 
   Instead of editing pages in a stupid web form, you can use vim and commit changes via svn. Or work disconnected using svk and push your changes out when you come online. Deal with edit conflicts with others in a sane environment. Take advantage of subversion's smart merges.
 
- ikiwiki can be run from a [[post-commit]] hook to update your wiki immediatly whenever you commit.
+ ikiwiki can be run from a [[post-commit]] hook to update your wiki immediately whenever you commit.
 
 * [[MarkDown]]
 
