--- a/doc/setup.mdwn
+++ b/doc/setup.mdwn
@@ -4,7 +4,9 @@ optional support for commits from the web.
 
 1. [[Install]] ikiwiki.
 
-		apt-get install ikiwiki
+		apt-get install ikiwiki # soon
+
+   Ikiwiki requires [[MarkDown]] be installed, and also uses the following perl modules: `CGI::Session` `CGI::FormBuilder`
 
 2. Create the subversion repository for your wiki.
 
