--- a/doc/features.mdwn
+++ b/doc/features.mdwn
@@ -31,6 +31,11 @@ Currently implemented:
 
   ikiwiki is fast and smart about updating a wiki, it only builds pages that have changed (and tracks things like creation of new pages and links that can indirectly cause a page to need a rebuild)
 
+* [[Templates]]
+
+  ikiwiki generates html using templates so you can change the look and 
+  layout of all pages in any way you would like.
+
 * [[BackLinks]]
 
   Automatically included on pages. Rather faster than eg [[MoinMoin]] and always there to help with navigation.
