--- a/doc/setup.mdwn
+++ b/doc/setup.mdwn
@@ -6,7 +6,8 @@ optional support for commits from the web.
 
 		apt-get install ikiwiki # soon
 
-   Ikiwiki requires [[MarkDown]] be installed, and also uses the following perl modules: `CGI::Session` `CGI::FormBuilder`
+   Ikiwiki requires [[MarkDown]] be installed, and also uses the following
+   perl modules: `CGI::Session` `CGI::FormBuilder` `HTML::Template`
 
 2. Create the subversion repository for your wiki.
 
