web commit from 66.118.98.137:

--- a/doc/todo.mdwn
+++ b/doc/todo.mdwn
@@ -43,8 +43,6 @@ case.
 
 ## html
 
-prettfiy and validate html. css.
-
-(Please god, save me from the html template monster though..)
+Make the html valid. Add css.
 
 ## [[Bugs]]
