web commit from 66.118.98.137:

--- a/doc/features.mdwn
+++ b/doc/features.mdwn
@@ -46,7 +46,7 @@ Currently implemented:
 
   Well, sorta. Rather than implementing YA history browser, it can link to [[ViewCVS]] or the link to browse the history of a wiki page.
 
-* [[RecentChanges]], editng pages in a web browser
+* [[RecentChanges]], editing pages in a web browser
 
   Nearly the definition of a wiki, although perhaps ikiwiki challenges how much of that web gunk a wiki really needs. These features are optional and can be enabled by enabling [[CGI]].
 
